<resources>
    <string name="app_name">Tie-IN</string>
    <string name="welcome_message">Welcome to Tie-IN</string>
    <string name="enter_your_details_below">Enter your details below</string>
    <string name="create_an_account_title">Create An Account</string>
    <string name="phone_number">Phone Number*</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="enter_your_phone_number">Enter Your Phone Number*</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="sign_up">Send OTP to Verify Number</string>
    <string name="name">Name*</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in_an_account_title">Sign in to an Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="don_t_have_an_account_click_to_signup">Don\'t have an account Click to SignUp</string>
    <string name="navigation_drawer_open">Navigation Drawer is Open</string>
    <string name="navigation_drawer_close">Navigation Drawer is Close</string>
    <string name="title_activity_sample_navigation_drawer">SampleNavigationDrawerActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="sign_out">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="welcome">Welcome</string>
    <string name="tie_in_focuses_on_providing_a_platform_to_small_medium_enterprises_smes_large_enterprises_as_well_as_individuals_the_company_s_mission_is_to_make_doing_business_easy"><![CDATA[Tie-IN focuses on providing a platform to Small & Medium Enterprises (SMEs), Large Enterprises as well as individuals.The company’s mission is ‘to make doing business easy.]]></string>
</resources>