<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/create_an_account_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:text="@string/create_an_account_title"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_22"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_enter_your_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:text="@string/enter_your_details_below"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_an_account_title" />

        <View
            android:id="@+id/separator"
            android:layout_width="@dimen/margin_40"
            android:layout_height="@dimen/margin_3"
            android:layout_marginTop="@dimen/margin_20"
            android:background="@drawable/signin_page_separator"
            app:layout_constraintEnd_toEndOf="@id/tv_enter_your_details"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="@id/tv_enter_your_details"
            app:layout_constraintTop_toBottomOf="@id/tv_enter_your_details" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_30"
            android:layout_marginLeft="@dimen/margin_30"
            android:layout_marginTop="@dimen/margin_40"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:textFontWeight="600"
            android:textSize="@dimen/test_size_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="@dimen/margin_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:layout_marginEnd="@dimen/margin_30"
            android:layout_marginRight="@dimen/margin_30"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/enter_your_phone_number"
            android:padding="@dimen/margin_10"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/test_size_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_phone"
            app:layout_constraintTop_toBottomOf="@id/tv_phone" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_30"
            android:layout_marginLeft="@dimen/margin_30"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textFontWeight="600"
            android:textSize="@dimen/test_size_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_phone" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="@dimen/margin_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/enter_your_name"
            android:padding="@dimen/margin_10"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/test_size_12"
            app:layout_constraintEnd_toEndOf="@id/et_phone"
            app:layout_constraintStart_toStartOf="@id/et_phone"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_30"
            android:layout_marginLeft="@dimen/margin_30"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textFontWeight="600"
            android:textSize="@dimen/test_size_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_name" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="@dimen/margin_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/enter_your_email"
            android:padding="@dimen/margin_10"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/test_size_12"
            app:layout_constraintEnd_toEndOf="@id/et_phone"
            app:layout_constraintStart_toStartOf="@id/et_phone"
            app:layout_constraintTop_toBottomOf="@id/tv_email" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_30"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_30"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:padding="@dimen/margin_10"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/margin_30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email" />

        <EditText
            android:id="@+id/et_otp"
            android:layout_width="@dimen/margin_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_40"
            android:background="@drawable/bg_edit_text"
            android:hint="enter OTP, send to your number"
            android:padding="@dimen/margin_10"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_24"
            android:textColor="@color/black"
            android:visibility="gone"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/test_size_12"
            app:layout_constraintEnd_toEndOf="@id/et_phone"
            app:layout_constraintStart_toStartOf="@id/et_phone"
            app:layout_constraintTop_toBottomOf="@id/btn_signup" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_verify_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_30"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_30"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:visibility="gone"
            android:padding="@dimen/margin_10"
            android:text="Verify Otp"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/margin_30"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_otp" />

        <TextView
            android:id="@+id/tv_click_to_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account Click to SignIn"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_verify_otp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>
