<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_Signin_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:text="@string/sign_in_an_account_title"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_22"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_enter_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:text="@string/enter_your_details_below"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_Signin_title" />

        <View
            android:id="@+id/separator2"
            android:layout_width="@dimen/margin_40"
            android:layout_height="@dimen/margin_3"
            android:layout_marginTop="@dimen/margin_20"
            android:background="@drawable/signin_page_separator"
            app:layout_constraintEnd_toEndOf="@id/tv_enter_details"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="@id/tv_enter_details"
            app:layout_constraintTop_toBottomOf="@id/tv_enter_details" />

        <TextView
            android:id="@+id/tv_mobileNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_30"
            android:layout_marginLeft="@dimen/margin_30"
            android:layout_marginTop="@dimen/margin_40"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:textFontWeight="600"
            android:textSize="@dimen/test_size_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator2" />

        <EditText
            android:id="@+id/et_mobileNo"
            android:layout_width="@dimen/margin_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:layout_marginEnd="@dimen/margin_30"
            android:layout_marginRight="@dimen/margin_30"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/enter_your_phone_number"
            android:padding="@dimen/margin_10"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/test_size_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_mobileNo"
            app:layout_constraintTop_toBottomOf="@id/tv_mobileNo" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_30"
            android:layout_marginLeft="@dimen/margin_30"
            android:layout_marginTop="@dimen/margin_20"
            android:text="Password*"
            android:textColor="@color/black"
            android:textFontWeight="600"
            android:textSize="@dimen/test_size_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_mobileNo" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="@dimen/margin_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:background="@drawable/bg_edit_text"
            android:hint="Enter Password*"
            android:padding="@dimen/margin_10"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/test_size_12"
            app:layout_constraintEnd_toEndOf="@id/et_mobileNo"
            app:layout_constraintStart_toStartOf="@id/et_mobileNo"
            app:layout_constraintTop_toBottomOf="@id/tv_password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_30"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_30"
            android:layout_marginBottom="@dimen/margin_30"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:padding="@dimen/margin_10"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password" />

        <TextView
            android:id="@+id/tv_click_to_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/don_t_have_an_account_click_to_signup"
            android:textColor="@color/blue"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_change_password" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>